Fixed wrapping notification

--- a/Seamless/styles/styles.scss
+++ b/Seamless/styles/styles.scss
@@ -1506,6 +1506,10 @@ td.td-form {
 	font-family: $base-font;
 }
 
+.nowrap {
+	white-space: nowrap;
+}
+
 /*-- DPL Background Styles --*/
 
 .bg-white {
